menyelesaikan website kasir

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -57,7 +57,7 @@
         <div class="card mt-4">
             <div class="card-header">
                 {% if session['role'] == 'admin' %}
-                    Grafik Penjualan per Bulan
+                    Grafik Penjualan
                 {% else %}
                     Total Pembelian Bulan Ini
                 {% endif %}
